--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@mui/x-date-pickers": "^7.0.0",
     "@mui/x-date-pickers-pro": "^7.0.0",
     "chart.js": "^4.4.2",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.11.2",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0"
